Removed welcome message, fixed projects padding
Fixed extra padding in projects
Removed welcome message

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -13,6 +13,11 @@
   padding-right: 5%;
 }
 
+.project-entry.flex-box{
+  padding-left:0px;
+  padding-right:0px;
+}
+
 h1 {
   font-size: 40px;
   color: #F5A623;
